tests/ocp/1-005_validate_route_tls/01-install.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example
spec:
  server:
    route:
      enabled: true
  applicationSet:
    enabled: true
    webhookServer:
      host: example.com
      route:
        enabled: true
