tests/ocp/1-005_validate_route_tls/02-embedded-tls-data.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example
spec:
  server:
    route:
      enabled: true
      tls:
        termination: reencrypt
        certificate: |-
          -----BEGIN CERTIFICATE-----
          MIIEbTCCAtWgAwIBAgIUA80/UfgNcx8tYz/XXlo6X8DJzXQwDQYJKoZIhvcNAQEL
[...]
          5PfEh1b+yuqxbF3bU8rII1LIsXxr96lssl+H0HxPpQKv
          -----END CERTIFICATE-----
        key: |-
          -----BEGIN PRIVATE KEY-----
          MIIG/QIBADANBgkqhkiG9w0BAQEFAASCBucwggbjAgEAAoIBgQCVLr/pzu0tNvgR
[...]
          HkXkOt1cAbJWZruf4j13X4s=
          -----END PRIVATE KEY-----
  applicationSet:
    enabled: true
    webhookServer:
      host: example.com
      route:
        enabled: true
        tls:
          termination: reencrypt
          certificate: |-
            -----BEGIN CERTIFICATE-----
            MIIEbTCCAtWgAwIBAgIUA80/UfgNcx8tYz/XXlo6X8DJzXQwDQYJKoZIhvcNAQEL
[...]
            5PfEh1b+yuqxbF3bU8rII1LIsXxr96lssl+H0HxPpQKv
            -----END CERTIFICATE-----
          key: |-
            -----BEGIN PRIVATE KEY-----
            MIIG/QIBADANBgkqhkiG9w0BAQEFAASCBucwggbjAgEAAoIBgQCVLr/pzu0tNvgR
[...]
            HkXkOt1cAbJWZruf4j13X4s=
            -----END PRIVATE KEY-----
