tests/ocp/1-005_validate_route_tls/03-secret-tls-data.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example
spec:
  server:
    route:
      enabled: true
      tls:
        externalCertificate:
          name: tls-data-secret
        termination: reencrypt
  applicationSet:
    enabled: true
    webhookServer:
      host: example.com
      route:
        enabled: true
        tls:
          externalCertificate:
            name: tls-data-secret
          termination: reencrypt
---
apiVersion: v1
kind: Secret
metadata:
  name: tls-data-secret
type: kubernetes.io/tls
stringData:
  tls.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIFrjCCA5agAwIBAgIUbM9O0W6IdumLQodDCDqyckYDr2IwDQYJKoZIhvcNAQEL
[...]
    UVwpFuaKz5vTCD36Gmmy/u8y
    -----END CERTIFICATE-----
  tls.key: |-
    -----BEGIN PRIVATE KEY-----
    MIIJQAIBADANBgkqhkiG9w0BAQEFAASCCSowggkmAgEAAoICAQDbgAmnUjFux9u2
[...]
    Xq+NinfrqOLJkIZ/u/PJu4KqN3M=
    -----END PRIVATE KEY-----
