tests/ocp/1-005_validate_route_tls/04-update-secret-tls-data.yaml
apiVersion: v1
kind: Secret
metadata:
  name: tls-data-secret
type: kubernetes.io/tls
stringData:
  tls.crt: |-
    -----BEGIN CERTIFICATE-----
    MIIEbTCCAtWgAwIBAgIUA80/UfgNcx8tYz/XXlo6X8DJzXQwDQYJKoZIhvcNAQEL
[...]
    5PfEh1b+yuqxbF3bU8rII1LIsXxr96lssl+H0HxPpQKv
    -----END CERTIFICATE-----
  tls.key: |-
    -----BEGIN PRIVATE KEY-----
    MIIG/QIBADANBgkqhkiG9w0BAQEFAASCBucwggbjAgEAAoIBgQCVLr/pzu0tNvgR
[...]
    HkXkOt1cAbJWZruf4j13X4s=
    -----END PRIVATE KEY-----
---
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
- script: sleep 10
