tests/ocp/1-005_validate_route_tls/02-assert.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example
status:
  phase: Available
  applicationSetController: Running
  server: Running
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-server
spec:
  to:
    kind: Service
    name: example-server
    weight: 100
  tls:
    termination: reencrypt
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEbTCCAtWgAwIBAgIUA80/UfgNcx8tYz/XXlo6X8DJzXQwDQYJKoZIhvcNAQEL
[...]
      5PfEh1b+yuqxbF3bU8rII1LIsXxr96lssl+H0HxPpQKv
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIG/QIBADANBgkqhkiG9w0BAQEFAASCBucwggbjAgEAAoIBgQCVLr/pzu0tNvgR
[...]
      HkXkOt1cAbJWZruf4j13X4s=
      -----END PRIVATE KEY-----
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-applicationset-controller-webhook
spec:
  to:
    kind: Service
    name: example-applicationset-controller
    weight: 100
  tls:
    termination: reencrypt
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIEbTCCAtWgAwIBAgIUA80/UfgNcx8tYz/XXlo6X8DJzXQwDQYJKoZIhvcNAQEL
[...]
      5PfEh1b+yuqxbF3bU8rII1LIsXxr96lssl+H0HxPpQKv
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIG/QIBADANBgkqhkiG9w0BAQEFAASCBucwggbjAgEAAoIBgQCVLr/pzu0tNvgR
[...]
      HkXkOt1cAbJWZruf4j13X4s=
      -----END PRIVATE KEY-----
