tests/ocp/1-005_validate_route_tls/03-assert.yaml
apiVersion: argoproj.io/v1beta1
kind: ArgoCD
metadata:
  name: example
status:
  phase: Available
  applicationSetController: Running
  server: Running
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-server
spec:
  to:
    kind: Service
    name: example-server
    weight: 100
  tls:
    termination: reencrypt
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFrjCCA5agAwIBAgIUbM9O0W6IdumLQodDCDqyckYDr2IwDQYJKoZIhvcNAQEL
[...]
      UVwpFuaKz5vTCD36Gmmy/u8y
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIJQAIBADANBgkqhkiG9w0BAQEFAASCCSowggkmAgEAAoICAQDbgAmnUjFux9u2
[...]
      Xq+NinfrqOLJkIZ/u/PJu4KqN3M=
      -----END PRIVATE KEY-----
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-applicationset-controller-webhook
spec:
  to:
    kind: Service
    name: example-applicationset-controller
    weight: 100
  tls:
    termination: reencrypt
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFrjCCA5agAwIBAgIUbM9O0W6IdumLQodDCDqyckYDr2IwDQYJKoZIhvcNAQEL
[...]
      UVwpFuaKz5vTCD36Gmmy/u8y
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIJQAIBADANBgkqhkiG9w0BAQEFAASCCSowggkmAgEAAoICAQDbgAmnUjFux9u2
[...]
      Xq+NinfrqOLJkIZ/u/PJu4KqN3M=
      -----END PRIVATE KEY-----
